Wed Mar  3 13:10:56 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (method_hash): new method. [ruby-talk:93968]

	* eval.c (proc_eq): do not compare dyna_vars.

	* eval.c (proc_hash): new method.

	* eval.c (rb_yield_0): protect break/return from within orphan (or
	  lambda) Proc object.

Wed Mar  3 09:52:05 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb ($topdir): use compile_dir only when not installed yet.
	  [ruby-talk:94098]

Wed Mar  3 01:18:52 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/converter.rb: handled Uconv::Error.

	* lib/rss/dublincore.rb: DublincoreModel -> DublinCoreModel

Wed Mar  3 00:59:30 2004  David Black  <dblack@wobblini.net>

	* scanf.rb: soak_up_spaces only ungetc's non-space last
	  character

	* scanf.rb: IO#block_scanf now returns partial last iteration
	  array if format string matches partly

Tue Mar  2 16:30:21 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (pipe_open): erred program name should be reported by
	  exceptions, instead of the first argument.

	* process.c (rb_spawn): ditto.

	* process.c (proc_spawn_v): use first argument as program name.

	* win32/win32.c (rb_w32_aspawn): ditto.

	* win32/win32.c (CreateChild): search executable file if no program
	  name given.

	* lib/drb/extservm.rb (invoke_service_command): use Process.spawn.
	  [ruby-dev:23103]

	* lib/rdoc/ri/ri_display.rb (setup_pager): use IO.popen.
	  [ruby-dev:23086], [ruby-dev:23103]

	* lib/rdoc/diagram.rb (convert_to_png): ditto.

	* lib/rdoc/generators/chm_generator.rb (compile_project): ditto.

Tue Mar  2 12:24:03 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub, wince/Makefile.sub (config.h): shouldn't check
	  defined? NORETURN. [ruby-dev:23100]

Tue Mar  2 11:28:40 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_iterator.rb (test_ljump): cannot use
	  assert_nothing_raised due to passing block.

Tue Mar  2 06:23:14 2004  David Black  <dblack@wobblini.net>
