@@ -1,3 +1,8 @@
+Wed Mar  3 18:58:20 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/ri/ri_display.rb (DefaultDisplay::setup_pager): ensure
+	  pager closes and stdout is restored.
+
 Wed Mar  3 13:10:56 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* eval.c (method_hash): new method. [ruby-talk:93968]
